attempt to fix broken inheritnace map

--- a/docsrc/_static/mycss.css
+++ b/docsrc/_static/mycss.css
@@ -3,7 +3,7 @@ max-width: 100% !important;
 }
 
 img.inheritance {
-  max-width: 100%;
+  max-width: none;
 }
 
 body {
